--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,12 +26,13 @@
                 android:orientation="horizontal"
                 android:layout_gravity="center">
 
-                <Button
+                <ImageButton
                     android:id="@+id/back_to_home"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="10dp"
-                    android:background="@drawable/border_green_round2"/>
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/back_gray_circle"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -51,6 +52,7 @@
                 android:layout_width="300dp"
                 android:layout_height="220dp"
                 android:layout_gravity="center"
+                android:background="@color/gray"
                 app:cardElevation="0dp"
                 app:cardCornerRadius="10dp">
 
@@ -120,7 +122,7 @@
                     android:textSize="18sp"/>
 
             </LinearLayout>
-
+            <!--Divider-->
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
@@ -128,6 +130,17 @@
                 android:layout_marginHorizontal="40dp"
                 android:background="@color/gray1"/>
 
+            <!--Description-->
+            <TextView
+                android:id="@+id/text_description_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginHorizontal="40dp"
+                android:text="@string/profile_description"
+                android:textSize="16sp"/>
+
+            <!--Preferences-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
