--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -111,15 +111,35 @@
                 android:textColor="@color/white"
                 android:textSize="15dp" />
             <!--Make Account-->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="@string/dont_have_an_account"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="40dp"
+               android:orientation="horizontal"
+               android:layout_gravity="center"
+               android:gravity="center">
+               <View
+                   android:layout_width="50dp"
+                   android:layout_height="0.5dp"
+                   android:layout_gravity="center"
+                   android:layout_marginRight="10dp"
+                   android:background="@color/white"/>
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_gravity="center"
+                   android:gravity="center"
+                   android:text="@string/dont_have_an_account"
+                   android:textColor="@color/white"
+                   android:textSize="14sp" />
+               <View
+                   android:layout_width="50dp"
+                   android:layout_height="0.5dp"
+                   android:layout_gravity="center"
+                   android:layout_marginLeft="10dp"
+                   android:background="@color/white"/>
+
+           </LinearLayout>
 
             <Button
                 android:id="@+id/button_make_account"
