--- a/app/src/main/res/layout/fragment_register_1.xml
+++ b/app/src/main/res/layout/fragment_register_1.xml
@@ -139,7 +139,7 @@
                     android:layout_marginLeft="4dp"
                     android:src="@drawable/icon_calendar"
                     android:padding="8dp"/>
-                <EditText
+                <TextView
                     android:id="@+id/date_birth_field"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
@@ -180,16 +180,6 @@
                     android:paddingHorizontal="8dp"
                     app:highlightColor="@color/white"
                     android:background="@android:color/transparent"/>
-<!--                <EditText-->
-<!--                    android:id="@+id/city_field"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="48dp"-->
-<!--                    android:hint="@string/city_register"-->
-<!--                    android:paddingLeft="8dp"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:textColorHint="@color/white"-->
-<!--                    android:background="@android:color/transparent"-->
-<!--                    android:textSize="14sp" />-->
             </LinearLayout>
 
             <!--Who are you-->
@@ -209,16 +199,14 @@
                     android:layout_marginLeft="4dp"
                     android:src="@drawable/icon_users"
                     android:padding="8dp"/>
-                <com.example.tinder_roush.Utils.SpinnerCustom
+                <Spinner
                     android:id="@+id/spinner_identity_register"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:hintText="@string/city_register"
+                    android:layout_height="40dp"
                     android:paddingLeft="8dp"
-                    android:layout_gravity="top"
-                    app:textColor="@color/white"
+                    android:layout_gravity="center"
                     android:paddingHorizontal="8dp"
-                    app:highlightColor="@color/white"
+                    android:spinnerMode="dropdown"
                     android:background="@android:color/transparent"/>
 
             </LinearLayout>
