--- a/app/src/main/res/layout/fragment_register_1.xml
+++ b/app/src/main/res/layout/fragment_register_1.xml
@@ -20,13 +20,35 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="80dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:layout_gravity="center"
             android:layout_marginBottom="20dp"
-            android:src="@drawable/logo_roush" />
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+
+            <ImageButton
+                android:id="@+id/back_to_login"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="-50dp"
+                android:src="@drawable/back_circle"
+                android:background="@android:color/transparent"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:src="@drawable/logo_roush" />
+            </LinearLayout>
+        </LinearLayout>
 
         <!--Form register-->
         <LinearLayout
@@ -86,6 +108,7 @@
                     android:layout_height="48dp"
                     android:hint="@string/name_register"
                     android:paddingLeft="8dp"
+                    android:maxLength="25"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:background="@android:color/transparent"
@@ -115,6 +138,7 @@
                     android:layout_height="48dp"
                     android:hint="@string/lastname_register"
                     android:paddingLeft="8dp"
+                    android:maxLength="25"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:background="@android:color/transparent"
@@ -234,6 +258,7 @@
                     android:layout_height="48dp"
                     android:hint="@string/nick_name_register"
                     android:paddingLeft="8dp"
+                    android:maxLength="20"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:background="@android:color/transparent"
@@ -292,6 +317,7 @@
                     android:layout_height="48dp"
                     android:hint="@string/password_register"
                     android:paddingLeft="8dp"
+                    android:maxLength="20"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:background="@android:color/transparent"
@@ -321,6 +347,7 @@
                     android:layout_height="48dp"
                     android:hint="@string/confirm_password_register"
                     android:paddingLeft="8dp"
+                    android:maxLength="20"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:background="@android:color/transparent"
