--- a/app/src/main/res/layout/fragment_register_2.xml
+++ b/app/src/main/res/layout/fragment_register_2.xml
@@ -31,7 +31,7 @@
             <LinearLayout
                 android:id="@+id/linearlayout_form1"
                 android:layout_width="match_parent"
-                android:layout_height="480dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/border_green_round"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
@@ -61,12 +61,45 @@
                     android:textSize="15sp"/>
 
                 <!--Fields-->
+
+                <!--What are you looking for-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/border_green_soft_transparent_round">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="45dp"
+                        android:layout_marginTop="2dp"
+                        android:src="@drawable/icon_message"
+                        android:padding="8dp"/>
+
+                    <EditText
+                        android:id="@+id/your_job"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:hint="@string/whats_your_job"
+                        android:textColor="@color/white"
+                        android:maxLength="25"
+                        android:textColorHint="@color/white"
+                        android:background="@android:color/transparent"
+                        android:textSize="14sp"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"/>
+                </LinearLayout>
+
                 <!--Describe you-->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
                     android:layout_height="130dp"
-                    android:layout_marginTop="20dp"
+                    android:maxLength="450"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginLeft="20dp"
                     android:background="@drawable/border_green_soft_transparent_round">
@@ -84,7 +117,7 @@
                         android:layout_height="match_parent"
                         android:gravity="top"
                         android:paddingTop="12dp"
-                        android:hint="Descríbete"
+                        android:hint="@string/describe_you"
                         android:textColor="@color/white"
                         android:background="@android:color/transparent"
                         android:textColorHint="@color/white"
@@ -110,40 +143,69 @@
                         android:src="@drawable/icon_heart"
                         android:padding="8dp"/>
 
-                    <EditText
-                        android:id="@+id/looking_for_register"
+                    <Spinner
+                        android:id="@+id/spinner_looking_for_register"
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:hint="¿Que estoy buscando?"
-                        android:textColor="@color/white"
-                        android:textColorHint="@color/white"
-                        android:background="@android:color/transparent"
-                        android:textSize="14sp"
-                        android:paddingBottom="10dp"
-                        android:paddingTop="10dp"/>
+                        android:layout_height="40dp"
+                        android:paddingLeft="8dp"
+                        android:layout_gravity="center"
+                        android:paddingHorizontal="8dp"
+                        android:spinnerMode="dropdown"
+                        android:background="@android:color/transparent"/>
+
+<!--                    <EditText-->
+<!--                        android:id="@+id/looking_for_register"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="48dp"-->
+<!--                        android:hint="@string/looking_for"-->
+<!--                        android:textColor="@color/white"-->
+<!--                        android:textColorHint="@color/white"-->
+<!--                        android:background="@android:color/transparent"-->
+<!--                        android:textSize="14sp"-->
+<!--                        android:paddingBottom="10dp"-->
+<!--                        android:paddingTop="10dp"/>-->
                 </LinearLayout>
 
 
                 <!--Integrate accounts-->
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:text="------  Integrar mis cuentas  ------"
-                    android:textColor="@color/white"
-                    android:gravity="center"
-                    android:textSize="15sp"/>
+                    android:layout_height="40dp"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    android:gravity="center">
+                    <View
+                        android:layout_width="50dp"
+                        android:layout_height="0.5dp"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="10dp"
+                        android:background="@color/white"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="@string/integrate_accounts"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
+                    <View
+                        android:layout_width="50dp"
+                        android:layout_height="0.5dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:background="@color/white"/>
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/icons_account"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginVertical="20dp"
                     android:gravity="center"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginHorizontal="20dp"
                     android:orientation="horizontal">
 
                     <ImageButton
