--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -261,12 +261,13 @@
 
                 <!--Edit profile-->
                 <Button
+                    android:id="@+id/edit_profile_data"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="20dp"
                     android:layout_gravity="center"
                     android:background="@drawable/border_green_white_round"
-                    android:text="Editar"
+                    android:text="@string/edit_data_profile"
                     android:textSize="18sp"
                     android:textAllCaps="false"/>
 
@@ -600,8 +601,9 @@
             <!--Interestings-->
             <LinearLayout
                 android:id="@+id/linearlayout_form1"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:background="@drawable/border_green_soft_green_round"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="20dp"
@@ -634,8 +636,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_marginTop="30dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginHorizontal="40dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_height="60dp"
@@ -668,8 +669,7 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginHorizontal="40dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_height="60dp"
@@ -700,8 +700,7 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginHorizontal="40dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_height="60dp"
@@ -731,8 +730,7 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginHorizontal="40dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_height="60dp"
@@ -763,8 +761,7 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginHorizontal="40dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_height="60dp"
@@ -795,8 +792,7 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginHorizontal="40dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_height="60dp"
@@ -827,8 +823,7 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginHorizontal="40dp"
                     android:layout_marginBottom="15dp"
                     android:layout_gravity="center"
                     android:gravity="center"
@@ -883,13 +878,14 @@
                     android:textSize="18sp"
                     android:text="@string/exclusive_content"
                     android:textColor="@color/black" />
-
+                <!--switch exclusive content-->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginVertical="20dp"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <LinearLayout
@@ -913,13 +909,28 @@
                     </LinearLayout>
 
                     <Switch
-                        android:id="@+id/switch_return"
+                        android:id="@+id/switch_activate_content"
                         android:layout_width="60dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_gravity="center|right"
                         android:layout_height="wrap_content"/>
 
                 </LinearLayout>
 
+                <!--button view exclusive content-->
+
+                <Button
+                    android:id="@+id/view_content_button"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:padding="10dp"
+                    android:layout_gravity="center"
+                    android:text="@string/view_content_"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:textAllCaps="false"
+                    android:visibility="invisible"
+                    android:background="@drawable/border_green_round"/>
 
             </LinearLayout>
 
