--- a/app/src/main/res/layout/activity_other_profile.xml
+++ b/app/src/main/res/layout/activity_other_profile.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="100dp"
         android:scrollbars="none">
 
         <LinearLayout
@@ -426,4 +426,39 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:paddingBottom="15dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="-160dp"
+        android:background="@drawable/gradient_black"
+        android:layout_marginHorizontal="30dp"
+        android:layout_gravity="center"
+        android:gravity="center">
+
+        <ImageButton
+            android:id="@+id/swipe_button"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_marginStart="8dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/swipe_button"/>
+
+        <ImageButton
+            android:id="@+id/like_button"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/like_button"/>
+
+        <ImageButton
+            android:id="@+id/match_button"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_marginEnd="8dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/match_button"/>
+
+    </LinearLayout>
 </LinearLayout>
