--- a/app/src/main/res/layout/activity_match_success.xml
+++ b/app/src/main/res/layout/activity_match_success.xml
@@ -21,12 +21,12 @@
             <ImageView
                 android:id="@+id/image_success_match"
                 android:layout_width="180dp"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginLeft="80dp"
                 android:layout_marginBottom="20dp"
                 android:rotation="-15"
-                android:src="@drawable/photo_main"/>
+                android:background="@color/gray1"/>
 
             <ImageView
                 android:layout_width="120dp"
